argocd/k8s/caasportal-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caasportal-backend
spec:
  selector:
    matchLabels:
      app: caasportal-backend
  template:
    metadata:
      labels:
        app: caasportal-backend
    spec:
      containers:
        - name: caasportal-backend
          image: gcr.io/architect-certification-289902/team6/caasportal-backend@sha256:69a978bc4babbb48418b69034c9b12d13b48bc34a44a1a6c372d34baa37f9b83
          ports:
          - containerPort: 8001
          resources:
            requests:
              cpu: 500m
              memory: 384Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: caasportal-backend
spec:
  type: ClusterIP
  selector:
    app: caasportal-backend
  ports:
  - port: 8001
