argocd/k8s/caasportal-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: caasportal-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: caasportal-frontend
          servicePort: 8000
      - path: /api
        backend:
          serviceName: caasportal-backend
          servicePort: 8001
      - path: /api/pv
        backend:
          serviceName: caasportal-provisioner
          servicePort: 8002
